[TASK] update favicons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Das ist die Webseite von Ramen1974">
   <meta name="keywords" content="Restaurant, Dresden, Neustadt, Leipzig, Japanische Küche, Authentic, Authentisch japanisch, Ramen, Suppe">
   <meta name="author" content="Somico GmbH">
-  <title>Ramen1974</title>
+  <title>Ramen1974 - Japanese Ramen</title>
 </head>
 
 <body>
