--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preload" href="/fonts/HerrVonMuellerhoff.ttf" as="font" type="font/ttf" crossorigin>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Das ist die Webseite von Ramen1974">
-  <meta name="keywords" content="Restaurant, Dresden, Neustadt, Leipzig, Japanische Küche, Authentic, Authentisch japanisch, Ramen, Suppe">
+  <meta name="keywords" content="Ramen, Ramen-Bar, Restaurant, Franchise, Dresden, Neustadt, Leipzig, Leipzig-Zentrum, Japanische Küche, Authentic, Authentisch japanisch, Suppe">
   <meta name="author" content="Somico GmbH">
   <title>Ramen1974 - Japanese Ramen</title>
 </head>
