[TASK] add open-graph meta tags

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   <meta name="description" content="Das ist die Webseite von Ramen1974">
   <meta name="keywords" content="Ramen, Ramen-Bar, Restaurant, Franchise, Dresden, Neustadt, Leipzig, Leipzig-Zentrum, Japanische Küche, Authentic, Authentisch japanisch, Suppe">
   <meta name="author" content="Somico GmbH">
+  <meta name="google-site-verification" content="gdMRnbhtXgWzdM4FI8qh5aN53KmigZzrj7rpwdoTukk" />
+  <meta property="og:title" content="Willkommen bei Ramen1974" />
+  <meta property="og:description" content="Entdecke Ramen1974, wo es die besten, schnellsten und leckersten Ramen der Stadt gibt." />
+  <meta property="og:image" content="https://ramen1974.de/img/og-image.webp" />
+  <meta property="og:url" content="https://ramen1974.de" />
+  <meta property="og:type" content="website" />
   <title>Ramen1974 - Japanese Ramen</title>
 </head>
 
