[TASK] update meta description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preload" href="/fonts/HerrVonMuellerhoff.ttf" as="font" type="font/ttf" crossorigin>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Das ist die Webseite von Ramen1974">
-  <meta name="keywords" content="Ramen, Ramen-Bar, Restaurant, Franchise, Dresden, Neustadt, Leipzig, Leipzig-Zentrum, Japanische Küche, Authentic, Authentisch japanisch, Suppe">
+  <meta name="keywords" content="Ramen1974, Ramen 1974, Ramen Dresden, Ramen Dresden Neustadt, Ramen Leipzig, Ramen Restaurant Dresden, Ramen Restaurant Leipzig, Ramen-Bar Dresden, Ramen-Bar Leipzig, Ramen 1974 Dresden, Ramen 1974 Leipzig">
   <meta name="author" content="Somico GmbH">
   <meta name="google-site-verification" content="gdMRnbhtXgWzdM4FI8qh5aN53KmigZzrj7rpwdoTukk" />
   <meta property="og:title" content="Willkommen bei Ramen1974" />
